# badminton-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  bun.lockb  docker-compose.yml  index.ts  package.json  types.d.ts  web.ts
.github/workflows/: docker.yml
src/: automation.rs  config.rs  main.rs
