[package]
name = "badminton_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
fantoccini = "0.18"
figment = { version = "0.10.19", features = ["toml"] }
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10.0"
log = { version = "0.4.22", features = ["serde", "std"] }
pretty_env_logger = "0.5.0"
